fixing gradle build